# mero-tee

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KMS_PHALA.md  LICENSE-MIT  README.md  SECURITY.md  compatibility-catalog.json  rust-toolchain.toml
.cargo/: audit.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
architecture/: attestation-flow.html  components.html  config-reference.html  error-handling.html  glossary.html  index.html  key-release-flow.html  nav.js  policy-management.html  release-pipeline.html  runbooks.html  styles.css  system-overview.html  trust-model.html  verification.html
attestation-verifier/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  style.css  vercel.json  verifier.js
crates/mero-kms-phala/: Cargo.toml  README.md  docker-compose.phala.yaml
crates/mero-kms-phala/src/: handlers.rs
docs/: ARCHITECTURE.md  DOCS_GRAPH.md  DOCS_INDEX.md  DOCS_NAVIGATION_MAP.md  GLOSSARY.md  IMPROVEMENT_BACKLOG_CROSS_ANALYSIS.md  MIGRATION_PLAN.md  MINIMAL_DOWNLOAD_SETS.md  README.md  RELEASE_PIPELINE_SEQUENCE_DIAGRAMS.md  RELEASE_TAXONOMY.md  REPO_RESTRUCTURE_PROPOSAL.md  TEE_VERIFICATION_FOR_BEGINNERS.md  TRUST_AND_VERIFICATION.md  WORKFLOW_SETUP.md  deploy-gcp.md  deploy-phala.md  kms-blue-green-rollout.md  kms-policy-auto-pipeline.md  kms-policy-promotion-pr.md  kms-staging-probe-phala.md  locked-image-policy-promotion-pr.md  node-image-gcp-policy-promotion-pr.md  phala-kms-attestation-task-list.md  phala-kms-key-protection-proposal.md  release-verification-examples.md  verify-mrtd.md
mero-kms/: Cargo.toml  README.md
mero-kms/src/: challenge_store.rs  config.rs  handlers.rs  main.rs  measurement.rs  policy.rs  runtime_event.rs  test_util.rs  util.rs
mero-kms/src/config/: env.rs  mod.rs  policy_loader.rs
mero-kms/src/handlers/: attest.rs  challenge.rs  errors.rs  get_key.rs  handler_tests.rs  mod.rs
mero-tee/: README.md  build-and-release.sh  playbook.yml  ubuntu-intel.pkrvars.hcl  ubuntu-x86.pkrvars.hcl  ubuntu.pkr.hcl  versions.json
node-image-gcp/: README.md  versions.json
policies/: index.json
scripts/: apply-merod-kms-phala-attestation-config.sh  apply_merod_kms_attestation_config.sh  check_release_version_sync.sh  extract_tdx_policy_candidates.py  fetch-and-analyze-failed-attestation.sh  generate-merod-kms-phala-attestation-config.sh  generate_merod_kms_attestation_config.sh  verify-release-assets.sh  (+10 more)
scripts-attestation/: extract_tdx_policy_candidates.py
scripts-policy/: apply-merod-kms-phala-attestation-config.sh  generate-merod-kms-phala-attestation-config.sh  read-kms-phala-policy-registry.sh  read-node-image-gcp-policy-registry.sh
scripts-release/: verify-release-assets.sh
(+290 files in other folders)
