[package]
name = "mero-kms-phala"
version = "2.3.25"
authors = ["Calimero Limited <info@calimero.network>"]
edition = "2021"
repository = "https://github.com/calimero-network/mero-tee"
license = "MIT OR Apache-2.0"
description = "Key management service for merod nodes running in Phala Cloud TEE"
publish = false

[[bin]]
name = "mero-kms-phala"
path = "src/main.rs"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
dstack-sdk = { git = "https://github.com/Dstack-TEE/dstack.git", rev = "14b850d9da172cc6cf943365bc37771c550c881f" }
dstack-attest = { git = "https://github.com/Dstack-TEE/dstack.git", rev = "14b850d9da172cc6cf943365bc37771c550c881f" }
eyre = "0.6"
hex = "0.4"
libp2p-identity = "0.2"
rand = "0.9"
redis = { version = "1.0", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# From calimero-network/core (git dependency; 0.10.1-rc.1 bump commit)
calimero-server-primitives = { git = "https://github.com/calimero-network/core", rev = "db829877" }
calimero-tee-attestation = { git = "https://github.com/calimero-network/core", rev = "db829877" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
